--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -4819,9 +4819,345 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff5cb63a-98a5-409f-aa0d-3d83668d4676",
+   "metadata": {},
+   "source": [
+    "## 2.2 Picking a ML model for a classification problem\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "11dc2b1c-f7c5-442c-b83f-0214efd7b2a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>63</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>145</td>\n",
+       "      <td>233</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>130</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>204</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>120</td>\n",
+       "      <td>236</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>178</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>354</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>163</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  slope  \\\n",
+       "0   63    1   3       145   233    1        0      150      0      2.3      0   \n",
+       "1   37    1   2       130   250    0        1      187      0      3.5      0   \n",
+       "2   41    0   1       130   204    0        0      172      0      1.4      2   \n",
+       "3   56    1   1       120   236    0        1      178      0      0.8      2   \n",
+       "4   57    0   0       120   354    0        1      163      1      0.6      2   \n",
+       "\n",
+       "   ca  thal  target  \n",
+       "0   0     1       1  \n",
+       "1   0     2       1  \n",
+       "2   0     2       1  \n",
+       "3   0     2       1  \n",
+       "4   0     2       1  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heart_disease = pd.read_csv(\"heart-disease.csv\")\n",
+    "heart_disease.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5480bc97-f10a-406a-a1d5-d4719cad5a53",
+   "id": "3e3da0e8-3d33-4f46-a0dc-8beba02dc55a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The map suggests tryinf \"LinearSVC\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c7ae6cdc-fb37-44ad-840c-dfe28f33a90f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\svm\\_base.py:1244: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8688524590163934"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the LinearSVC class\n",
+    "from sklearn.svm import LinearSVC\n",
+    "\n",
+    "# Setup random seed\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Make the data\n",
+    "X = heart_disease.drop(\"target\", axis=1)\n",
+    "y = heart_disease[\"target\"]\n",
+    "\n",
+    "# Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "# Instatiate LinearSVC\n",
+    "clf = LinearSVC()\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate\n",
+    "clf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "38bbbe31-0eea-4432-ab15-d6557633662f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8524590163934426"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the RandomForestClassifier class\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Setup random seed\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Make the data\n",
+    "X = heart_disease.drop(\"target\", axis=1)\n",
+    "y = heart_disease[\"target\"]\n",
+    "\n",
+    "# Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "# Instatiate RandomForestClassifier\n",
+    "clf = RandomForestClassifier()\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate\n",
+    "clf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "545cae28-cce0-4525-aedf-2ad3a927506b",
+   "metadata": {},
+   "source": [
+    "Tidbit:\n",
+    "\n",
+    "    1. If you have structured data, use ensemble methods\n",
+    "    2. If you have unstructured data, use deep learning or transfer learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d2ddb4f-9a24-4300-bc2e-b44551a28b21",
    "metadata": {},
    "outputs": [],
    "source": []
