--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -4028,7 +4028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "fe03e02e-8ed6-416f-8f9f-5e870bd5e2d1",
    "metadata": {},
    "outputs": [
@@ -4062,7 +4062,7 @@
        " 'DESCR': '.. _california_housing_dataset:\\n\\nCalifornia Housing dataset\\n--------------------------\\n\\n**Data Set Characteristics:**\\n\\n    :Number of Instances: 20640\\n\\n    :Number of Attributes: 8 numeric, predictive attributes and the target\\n\\n    :Attribute Information:\\n        - MedInc        median income in block group\\n        - HouseAge      median house age in block group\\n        - AveRooms      average number of rooms per household\\n        - AveBedrms     average number of bedrooms per household\\n        - Population    block group population\\n        - AveOccup      average number of household members\\n        - Latitude      block group latitude\\n        - Longitude     block group longitude\\n\\n    :Missing Attribute Values: None\\n\\nThis dataset was obtained from the StatLib repository.\\nhttps://www.dcc.fc.up.pt/~ltorgo/Regression/cal_housing.html\\n\\nThe target variable is the median house value for California districts,\\nexpressed in hundreds of thousands of dollars ($100,000).\\n\\nThis dataset was derived from the 1990 U.S. census, using one row per census\\nblock group. A block group is the smallest geographical unit for which the U.S.\\nCensus Bureau publishes sample data (a block group typically has a population\\nof 600 to 3,000 people).\\n\\nA household is a group of people residing within a home. Since the average\\nnumber of rooms and bedrooms in this dataset are provided per household, these\\ncolumns may take surprisingly large values for block groups with few households\\nand many empty houses, such as vacation resorts.\\n\\nIt can be downloaded/loaded using the\\n:func:`sklearn.datasets.fetch_california_housing` function.\\n\\n.. topic:: References\\n\\n    - Pace, R. Kelley and Ronald Barry, Sparse Spatial Autoregressions,\\n      Statistics and Probability Letters, 33 (1997) 291-297\\n'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4076,7 +4076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "e3dfa38f-3962-497f-9587-0889479a23ec",
    "metadata": {},
    "outputs": [
@@ -4187,7 +4187,7 @@
        "4    -122.25  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4201,7 +4201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "06ccae07-1f3e-43ef-8f0f-8da1c3efb223",
    "metadata": {},
    "outputs": [
@@ -4318,7 +4318,7 @@
        "4    -122.25   3.422  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5726,9 +5726,282 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cf004ec5-6dc3-432a-ac8f-4c8edcf89edc",
+   "metadata": {},
+   "source": [
+    "`predict` can also be used for regression models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f5b903c6-6c87-497c-bb8a-f183f840b00a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MedInc</th>\n",
+       "      <th>HouseAge</th>\n",
+       "      <th>AveRooms</th>\n",
+       "      <th>AveBedrms</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>AveOccup</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8.3252</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>6.984127</td>\n",
+       "      <td>1.023810</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>2.555556</td>\n",
+       "      <td>37.88</td>\n",
+       "      <td>-122.23</td>\n",
+       "      <td>4.526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.3014</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>6.238137</td>\n",
+       "      <td>0.971880</td>\n",
+       "      <td>2401.0</td>\n",
+       "      <td>2.109842</td>\n",
+       "      <td>37.86</td>\n",
+       "      <td>-122.22</td>\n",
+       "      <td>3.585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.2574</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>8.288136</td>\n",
+       "      <td>1.073446</td>\n",
+       "      <td>496.0</td>\n",
+       "      <td>2.802260</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>-122.24</td>\n",
+       "      <td>3.521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.6431</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>5.817352</td>\n",
+       "      <td>1.073059</td>\n",
+       "      <td>558.0</td>\n",
+       "      <td>2.547945</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>3.413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.8462</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>6.281853</td>\n",
+       "      <td>1.081081</td>\n",
+       "      <td>565.0</td>\n",
+       "      <td>2.181467</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>3.422</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   MedInc  HouseAge  AveRooms  AveBedrms  Population  AveOccup  Latitude  \\\n",
+       "0  8.3252      41.0  6.984127   1.023810       322.0  2.555556     37.88   \n",
+       "1  8.3014      21.0  6.238137   0.971880      2401.0  2.109842     37.86   \n",
+       "2  7.2574      52.0  8.288136   1.073446       496.0  2.802260     37.85   \n",
+       "3  5.6431      52.0  5.817352   1.073059       558.0  2.547945     37.85   \n",
+       "4  3.8462      52.0  6.281853   1.081081       565.0  2.181467     37.85   \n",
+       "\n",
+       "   Longitude  target  \n",
+       "0    -122.23   4.526  \n",
+       "1    -122.22   3.585  \n",
+       "2    -122.24   3.521  \n",
+       "3    -122.25   3.413  \n",
+       "4    -122.25   3.422  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "07ce72de-b049-48e0-a25c-ba32d07f8077",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# create the data\n",
+    "X = housing_df.drop(\"target\", axis=1)\n",
+    "y = housing_df[\"target\"]\n",
+    "\n",
+    "# Split into training and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "# Create model instance\n",
+    "model= RandomForestRegressor() \n",
+    "\n",
+    "# Fit the model to the data\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions \n",
+    "y_preds = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "2c52cd8a-bd5c-4f14-93fc-f9b472fcc0d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.49909  , 0.74815  , 4.9334564, 2.56978  , 2.3469   , 1.6729601,\n",
+       "       2.30151  , 1.66775  , 2.52649  , 4.8600979])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_preds[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "09d524d9-e21e-4d7a-befb-c1d5f4eddd26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.477  , 0.458  , 5.00001, 2.186  , 2.78   , 1.587  , 1.982  ,\n",
+       "       1.575  , 3.4    , 4.466  ])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(y_test[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ca2feb9b-e5f4-4767-ab0d-d4894c1d20b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.32672061405038777"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# compare the predictions to the truth\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "mean_absolute_error(y_test, y_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "20683093-15f5-4a9a-be7c-59f1fe712115",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4128"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(y_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ee413c61-aa09-433b-81fa-f7b0fba0a22f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4128"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(y_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35981d67-8c76-403e-a76e-cd8f635eeea1",
+   "id": "9e251056-23fd-464a-8a90-1d82eeff7c8d",
    "metadata": {},
    "outputs": [],
    "source": []
